--- a/index.html
+++ b/index.html
@@ -102,20 +102,20 @@
   <h3>Unser Programm umfasst die folgenden Kernpunkte:</h3>
   <ul>
     <h4>Austritt aus der EU</h4>
-    <li>- nationale Währung (gedeckelt)</li>
-    <li>- trotzdem Zusammenarbeit mit europäischen Nachbarn</li>
+    <h3>nationale Währung (gedeckelt)</h3>
+    <h3>trotzdem Zusammenarbeit mit europäischen Nachbarn</h3>
 
     <h4>Kontrollierte Migration</h4>
-    <li>- Grenzsicherung</li>
-    <li>- vereinfachte Eingliederung in den Arbeitsmarkt</li>
+    <h3>Grenzsicherung</h3>
+    <h3>vereinfachte Eingliederung in den Arbeitsmarkt</h3>
 
     <h4>Reform des Bildungssystems</h4>
-    <li>- Abschaffung des Bullemielernens</li>
-    <li>- verstärkter Einsatz von KI</li>
+    <h3>Abschaffung des Bullemielernens</h3>
+    <h3>verstärkter Einsatz von KI</h3>
 
     <h4>Kapitalistische Wirtschaftspolitik</h4>
-    <li>- unternehmensfreundliche Politik</li>
-    <li>- Ausbau erneuerbarer Energien mit Grundsicherung durch konventionelle Energieformen</li>
+    <h3>unternehmensfreundliche Politik</h3>
+    <h3>Ausbau erneuerbarer Energien mit Grundsicherung durch konventionelle Energieformen</h3>
   </ul>
 </section>
 
