--- a/index.html
+++ b/index.html
@@ -102,20 +102,20 @@
   <h3>Unser Programm umfasst die folgenden Kernpunkte:</h3>
   <ul>
     <h4>Austritt aus der EU</h4>
-    <h3>nationale Währung (gedeckelt)</h3>
-    <h3>trotzdem Zusammenarbeit mit europäischen Nachbarn</h3>
+    <h6>-nationale Währung (gedeckelt)</h6>
+    <h6>-trotzdem Zusammenarbeit mit europäischen Nachbarn</h6>
 
     <h4>Kontrollierte Migration</h4>
-    <h3>Grenzsicherung</h3>
-    <h3>vereinfachte Eingliederung in den Arbeitsmarkt</h3>
+    <h6>-Grenzsicherung</h6>
+    <h6>-vereinfachte Eingliederung in den Arbeitsmarkt</h6>
 
     <h4>Reform des Bildungssystems</h4>
-    <h3>Abschaffung des Bullemielernens</h3>
-    <h3>verstärkter Einsatz von KI</h3>
+    <h6>-Abschaffung des Bullemielernens</h6>
+    <h6>-verstärkter Einsatz von KI</h6>
 
     <h4>Kapitalistische Wirtschaftspolitik</h4>
-    <h3>unternehmensfreundliche Politik</h3>
-    <h3>Ausbau erneuerbarer Energien mit Grundsicherung durch konventionelle Energieformen</h3>
+    <h6>-unternehmensfreundliche Politik</h6>
+    <h6>-Ausbau erneuerbarer Energien mit Grundsicherung durch konventionelle Energieformen</h6>
   </ul>
 </section>
 
