--- a/index.html
+++ b/index.html
@@ -102,20 +102,20 @@
   <h3>Unser Programm umfasst die folgenden Kernpunkte:</h3>
   <ul>
     <h4>Austritt aus der EU</h4>
-    <h6>-nationale Währung (gedeckelt)</h6>
-    <h6>-trotzdem Zusammenarbeit mit europäischen Nachbarn</h6>
+    <li>-nationale Währung (gedeckelt)</li>
+    <li>-trotzdem Zusammenarbeit mit europäischen Nachbarn</li>
 
     <h4>Kontrollierte Migration</h4>
-    <h6>-Grenzsicherung</h6>
-    <h6>-vereinfachte Eingliederung in den Arbeitsmarkt</h6>
+    <li>-Grenzsicherung</li>
+    <li>-vereinfachte Eingliederung in den Arbeitsmarkt</li>
 
     <h4>Reform des Bildungssystems</h4>
-    <h6>-Abschaffung des Bullemielernens</h6>
-    <h6>-verstärkter Einsatz von KI</h6>
+    <li>-Abschaffung des Bullemielernens</li>
+    <li>-verstärkter Einsatz von KI</li>
 
     <h4>Kapitalistische Wirtschaftspolitik</h4>
-    <h6>-unternehmensfreundliche Politik</h6>
-    <h6>-Ausbau erneuerbarer Energien mit Grundsicherung durch konventionelle Energieformen</h6>
+    <li>-unternehmensfreundliche Politik</li>
+    <li>-Ausbau erneuerbarer Energien mit Grundsicherung durch konventionelle Energieformen</li>
   </ul>
 </section>
 
