--- a/index.html
+++ b/index.html
@@ -101,21 +101,21 @@
   <h2>Parteiprogramm</h2>
   <h3>Unser Programm umfasst die folgenden Kernpunkte:</h3>
   <ul>
-    <h4>Austritt aus der EU</h4>
-    <li>-nationale Währung (gedeckelt)</li>
-    <li>-trotzdem Zusammenarbeit mit europäischen Nachbarn</li>
+    <h3>Austritt aus der EU</h3>
+    <h4>-nationale Währung (gedeckelt)</h4>
+    <h4>-trotzdem Zusammenarbeit mit europäischen Nachbarn</h4>
 
-    <h4>Kontrollierte Migration</h4>
-    <li>-Grenzsicherung</li>
-    <li>-vereinfachte Eingliederung in den Arbeitsmarkt</li>
+    <h3>Kontrollierte Migration</h3>
+    <h4>-Grenzsicherung</h4>
+    <h4>-vereinfachte Eingliederung in den Arbeitsmarkt</h4>
 
-    <h4>Reform des Bildungssystems</h4>
-    <li>-Abschaffung des Bullemielernens</li>
-    <li>-verstärkter Einsatz von KI</li>
+    <h3>Reform des Bildungssystems</h3>
+    <h4>-Abschaffung des Bullemielernens</h4>
+    <h4>-verstärkter Einsatz von KI</h4>
 
-    <h4>Kapitalistische Wirtschaftspolitik</h4>
-    <li>-unternehmensfreundliche Politik</li>
-    <li>-Ausbau erneuerbarer Energien mit Grundsicherung durch konventionelle Energieformen</li>
+    <h3>Kapitalistische Wirtschaftspolitik</h3>
+    <h4>-unternehmensfreundliche Politik</h4>
+    <h4>-Ausbau erneuerbarer Energien mit Grundsicherung durch konventionelle Energieformen</h4>
   </ul>
 </section>
 
