--- a/index.html
+++ b/index.html
@@ -72,6 +72,22 @@
     .hidden {
       display: none;
     }
+    .nav-btn {
+  background-color: transparent;
+  border: 2px solid #fff;
+  color: #fff;
+  padding: 6px 12px;
+  margin: 0 5px;
+  font-size: 14px;
+  cursor: pointer;
+  border-radius: 4px;
+  transition: background-color 0.3s, color 0.3s;
+}
+
+.nav-btn:hover {
+  background-color: #fff;
+  color: #000;
+}
   </style>
 </head>
 <body>
@@ -80,10 +96,15 @@
   <h1>Deutschlands Zukunft SUF</h1>
   <nav>
     <ul>
-      <li><a href="#mitglieder">Mitglieder drücke M</a></li>
-      <li><a href="#programm">Parteiprogramm drücke P</a></li>
-      <li><a href="#unterstuetzung">Unterstützungsmöglichkeiten drücke U</a></li>
-      <li><a href="#Quiz">Quiz drücke u + Q</a></li>
+     <nav>
+  <ul>
+    <li><button class="nav-btn">Mitglieder</button></li>
+    <li><button class="nav-btn">Parteiprogramm</button></li>
+    <li><button class="nav-btn">Unterstützung</button></li>
+    <li><button class="nav-btn">Quiz</button></li>
+  </ul>
+</nav>
+
     </ul>
   </nav>
 </header>
