--- a/index.html
+++ b/index.html
@@ -224,24 +224,23 @@
     }
   });
 
-  document.addEventListener('keydown', function(event) {
-    if (event.key === 'q') {
+ 
+     document.getElementById("Quize").addEventListener("click", function() {
       document.getElementById('QuizeButton').classList.remove('hidden');
     }
-    if (event.key === 'p') {
+    document.getElementById("Parteiprogramm").addEventListener("click", function() {
       document.getElementById('programm').classList.remove('hidden');
     }
-    if (event.key === 'm') {
+    document.getElementById("Mitglieder").addEventListener("click", function() {
       document.getElementById('mitglieder').classList.remove('hidden');
     }
-    if (event.key === 'u') {
+     document.getElementById("Unterstützung").addEventListener("click", function() {
       document.getElementById('unterstuetzung').classList.remove('hidden');
     }
     if (event.key === 'S') {
       document.getElementById('specialButton').classList.remove('hidden');
     }
-  });
-
+ 
   document.getElementById("specialButton").addEventListener("click", function() {
     window.open("https://i.ytimg.com/vi/9rlSdKYc_7o/maxresdefault.jpg");
   });
