--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     section {
       padding: 40px;
       margin: 20px;
-      background-color: #d5d5e2;
+      background-color: #535355;
       border-radius: 8px;
     }
     button {
