--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     section {
       padding: 40px;
       margin: 20px;
-      background-color: #535355;
+      background-color: #6d6c6c;
       border-radius: 8px;
     }
     button {
